# opentargets-mcp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  run.sh  server.json
.github/workflows/: ci.yml  release.yml
examples/: agent_app.py  react_agent.py
scripts/: configure_claude.py
src/opentargets_mcp/: __init__.py  queries.py  resolver.py  server.py  settings.py  tools.py  utils.py
src/opentargets_mcp/tools/: __init__.py  disease.py  drug.py  evidence.py  graphql.py  meta.py  search.py  study.py  target.py  variant.py  workflows.py
src/opentargets_mcp/tools/drug/: associations.py  identity.py
tests/: conftest.py  test_drug_tools.py  test_graphql_tools.py  test_regressions.py  test_search_tools.py  test_server.py  test_study_tools.py  test_target_tools.py  test_variant_tools.py  test_workflow_tools.py
