[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentargets-mcp"
version = "0.1.0"
description = "MCP server for querying Open Targets GraphQL API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Zhong Ren", email = "zhong.ren@hotmail.com"}]
dependencies = [
    "mcp",
    "aiohttp",
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "openai",
    "python-dotenv",
    "thefuzz",
]

[project.scripts]
opentargets-mcp = "opentargets_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"